# satpaper

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rust-toolchain.toml
.github/workflows/: release.yml  rust.yml
docker/: Dockerfile  docker-compose.yml  supervisord.conf
src/: composite.rs  config.rs  main.rs  slider.rs  wallpaper.rs
