[package]
name = "satpaper"
authors = ["Colonial"]
version = "0.5.4"
edition = "2021"

description = "Display near-real-time satellite imagery on your desktop."
repository = "https://github.com/Colonial-Dev/satpaper"
readme = "README.md"
license = "MIT OR Apache-2.0"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[dependencies]
# Runtime
anyhow = "1.0.75"
log = "0.4.20"
env_logger = "0.10.0"
clap = { version = "4.4.2", features = ["derive", "env"] }

# Compositing
image = "0.24.7"

# Scraping
ureq = "2.7.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"