[package]
name = "satpaper"
authors = ["Colonial"]
version = "0.6.1"
edition = "2021"

description = "Display near-real-time satellite imagery on your desktop."
repository = "https://github.com/Colonial-Dev/satpaper"
readme = "README.md"
license = "MIT OR Apache-2.0"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[dependencies]
# Runtime
anyhow = "=1.0.81"
log = "=0.4.21"
env_logger = "=0.11.3"
clap = { version = "=4.5.3", features = ["derive", "env"] }

# Compositing
image = { version = "=0.25.0", features = ["jpeg", "gif", "png", "pnm", "qoi", "tga", "tiff", "webp", "bmp", "dds"], default-features = false }
fimg = "=0.4.41"
png = "=0.17.13"

# Scraping
ureq = "=2.9.6"
serde = { version = "=1.0.197", features = ["derive"] }
serde_json = "=1.0.114"
rayon = "=1.9.0"